syntax = "proto3";

option java_multiple_files = true;
package virh.sense.trade.service;

import "Util.proto";

message AccountAndPriceRequest {
	int64 accountId = 1;
	BDecimal price = 2;
}

message AccountRequest {
	int64 accountId = 1;
}

message AccountQueryResponse {
	BDecimal price = 1;
}

service AccountService {
  rpc checkBalanceEnough (AccountAndPriceRequest) returns (CheckResponse);
  rpc prepareBalanceDecrement (AccountAndPriceRequest) returns (EmptyResponse);
  rpc prepareBalanceRevert (AccountAndPriceRequest) returns (EmptyResponse);
  rpc queryBalance (AccountRequest) returns (AccountQueryResponse);
  rpc executeBalanceDecrement (AccountAndPriceRequest) returns (EmptyResponse);
}