syntax = "proto3";

option java_multiple_files = true;
package virh.sense.trade.service;

import "Util.proto";

message ProductAndNumberRequest {
	int64 productId = 1;
	int64 number = 2;
}

message ProductRequest {
	int64 productId = 1;
}

message ProductQueryResponse {
	int64 number = 1;
}

service ProductService {
  rpc checkStockEnough (ProductAndNumberRequest) returns (CheckResponse);
  rpc prepareStockDecrement (ProductAndNumberRequest) returns (EmptyResponse);
  rpc prepareStockRevert (ProductAndNumberRequest) returns (EmptyResponse);
  rpc queryStock (ProductRequest) returns (ProductQueryResponse);
  rpc executeStockDecrement (ProductAndNumberRequest) returns (EmptyResponse);
}